// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alpha renders correctly 1`] = `
<div
  className="alpha-picker "
  style={
    Object {
      "height": "16px",
      "position": "relative",
      "width": "316px",
    }
  }
>
  <div
    style={
      Object {
        "MozBorderRadius": "2px",
        "OBorderRadius": "2px",
        "WebkitBorderRadius": "2px",
        "borderRadius": "2px",
        "bottom": "0px",
        "left": "0px",
        "msBorderRadius": "2px",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
      }
    }
  >
    <div
      style={
        Object {
          "MozBorderRadius": "2px",
          "OBorderRadius": "2px",
          "WebkitBorderRadius": "2px",
          "borderRadius": "2px",
          "bottom": "0px",
          "left": "0px",
          "msBorderRadius": "2px",
          "overflow": "hidden",
          "position": "absolute",
          "right": "0px",
          "top": "0px",
        }
      }
    >
      <div
        style={
          Object {
            "MozBorderRadius": "",
            "MozBoxShadow": "",
            "OBorderRadius": "",
            "OBoxShadow": "",
            "WebkitBorderRadius": "",
            "WebkitBoxShadow": "",
            "background": "url(data:image/png;base64,00) center left",
            "borderRadius": "",
            "bottom": "0px",
            "boxShadow": "",
            "left": "0px",
            "msBorderRadius": "",
            "msBoxShadow": "",
            "position": "absolute",
            "right": "0px",
            "top": "0px",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "MozBorderRadius": "2px",
          "MozBoxShadow": undefined,
          "OBorderRadius": "2px",
          "OBoxShadow": undefined,
          "WebkitBorderRadius": "2px",
          "WebkitBoxShadow": undefined,
          "background": "linear-gradient(to right, rgba(34,25,77, 0) 0%,
             rgba(34,25,77, 1) 100%)",
          "borderRadius": "2px",
          "bottom": "0px",
          "boxShadow": undefined,
          "left": "0px",
          "msBorderRadius": "2px",
          "msBoxShadow": undefined,
          "position": "absolute",
          "right": "0px",
          "top": "0px",
        }
      }
    />
    <div
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      style={
        Object {
          "height": "100%",
          "margin": "0 3px",
          "outline": "none",
          "position": "relative",
        }
      }
      tabIndex={0}
    >
      <div
        style={
          Object {
            "left": "100%",
            "position": "absolute",
          }
        }
      >
        <div
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "MozTransform": "translate(-9px, -1px)",
              "OBorderRadius": "50%",
              "OBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "OTransform": "translate(-9px, -1px)",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "WebkitTransform": "translate(-9px, -1px)",
              "backgroundColor": "rgb(248, 248, 248)",
              "borderRadius": "50%",
              "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "height": "18px",
              "msBorderRadius": "50%",
              "msBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "msTransform": "translate(-9px, -1px)",
              "transform": "translate(-9px, -1px)",
              "width": "18px",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Alpha renders on server correctly 1`] = `
<div
  className="alpha-picker "
  style={
    Object {
      "height": "16px",
      "position": "relative",
      "width": "316px",
    }
  }
>
  <div
    style={
      Object {
        "MozBorderRadius": "2px",
        "OBorderRadius": "2px",
        "WebkitBorderRadius": "2px",
        "borderRadius": "2px",
        "bottom": "0px",
        "left": "0px",
        "msBorderRadius": "2px",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
      }
    }
  >
    <div
      style={
        Object {
          "MozBorderRadius": "2px",
          "OBorderRadius": "2px",
          "WebkitBorderRadius": "2px",
          "borderRadius": "2px",
          "bottom": "0px",
          "left": "0px",
          "msBorderRadius": "2px",
          "overflow": "hidden",
          "position": "absolute",
          "right": "0px",
          "top": "0px",
        }
      }
    >
      <div
        style={
          Object {
            "MozBorderRadius": "",
            "MozBoxShadow": "",
            "OBorderRadius": "",
            "OBoxShadow": "",
            "WebkitBorderRadius": "",
            "WebkitBoxShadow": "",
            "background": "url(data:image/png;base64,00) center left",
            "borderRadius": "",
            "bottom": "0px",
            "boxShadow": "",
            "left": "0px",
            "msBorderRadius": "",
            "msBoxShadow": "",
            "position": "absolute",
            "right": "0px",
            "top": "0px",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "MozBorderRadius": "2px",
          "MozBoxShadow": undefined,
          "OBorderRadius": "2px",
          "OBoxShadow": undefined,
          "WebkitBorderRadius": "2px",
          "WebkitBoxShadow": undefined,
          "background": "linear-gradient(to right, rgba(255,0,0, 0) 0%,
             rgba(255,0,0, 1) 100%)",
          "borderRadius": "2px",
          "bottom": "0px",
          "boxShadow": undefined,
          "left": "0px",
          "msBorderRadius": "2px",
          "msBoxShadow": undefined,
          "position": "absolute",
          "right": "0px",
          "top": "0px",
        }
      }
    />
    <div
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      style={
        Object {
          "height": "100%",
          "margin": "0 3px",
          "outline": "none",
          "position": "relative",
        }
      }
      tabIndex={0}
    >
      <div
        style={
          Object {
            "left": "100%",
            "position": "absolute",
          }
        }
      >
        <div
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "MozTransform": "translate(-9px, -1px)",
              "OBorderRadius": "50%",
              "OBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "OTransform": "translate(-9px, -1px)",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "WebkitTransform": "translate(-9px, -1px)",
              "backgroundColor": "rgb(248, 248, 248)",
              "borderRadius": "50%",
              "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "height": "18px",
              "msBorderRadius": "50%",
              "msBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "msTransform": "translate(-9px, -1px)",
              "transform": "translate(-9px, -1px)",
              "width": "18px",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Alpha renders vertically 1`] = `
<div
  className="alpha-picker "
  style={
    Object {
      "height": "200px",
      "position": "relative",
      "width": "20px",
    }
  }
>
  <div
    style={
      Object {
        "MozBorderRadius": "2px",
        "OBorderRadius": "2px",
        "WebkitBorderRadius": "2px",
        "borderRadius": "2px",
        "bottom": "0px",
        "left": "0px",
        "msBorderRadius": "2px",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
      }
    }
  >
    <div
      style={
        Object {
          "MozBorderRadius": "2px",
          "OBorderRadius": "2px",
          "WebkitBorderRadius": "2px",
          "borderRadius": "2px",
          "bottom": "0px",
          "left": "0px",
          "msBorderRadius": "2px",
          "overflow": "hidden",
          "position": "absolute",
          "right": "0px",
          "top": "0px",
        }
      }
    >
      <div
        style={
          Object {
            "MozBorderRadius": "",
            "MozBoxShadow": "",
            "OBorderRadius": "",
            "OBoxShadow": "",
            "WebkitBorderRadius": "",
            "WebkitBoxShadow": "",
            "background": "url(data:image/png;base64,00) center left",
            "borderRadius": "",
            "bottom": "0px",
            "boxShadow": "",
            "left": "0px",
            "msBorderRadius": "",
            "msBoxShadow": "",
            "position": "absolute",
            "right": "0px",
            "top": "0px",
          }
        }
      />
    </div>
    <div
      style={
        Object {
          "MozBorderRadius": "2px",
          "MozBoxShadow": undefined,
          "OBorderRadius": "2px",
          "OBoxShadow": undefined,
          "WebkitBorderRadius": "2px",
          "WebkitBoxShadow": undefined,
          "background": "linear-gradient(to bottom, rgba(34,25,77, 0) 0%,
             rgba(34,25,77, 1) 100%)",
          "borderRadius": "2px",
          "bottom": "0px",
          "boxShadow": undefined,
          "left": "0px",
          "msBorderRadius": "2px",
          "msBoxShadow": undefined,
          "position": "absolute",
          "right": "0px",
          "top": "0px",
        }
      }
    />
    <div
      onMouseDown={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      style={
        Object {
          "height": "100%",
          "margin": "0 3px",
          "outline": "none",
          "position": "relative",
        }
      }
      tabIndex={0}
    >
      <div
        style={
          Object {
            "left": 0,
            "position": "absolute",
            "top": "100%",
          }
        }
      >
        <div
          style={
            Object {
              "MozBorderRadius": "50%",
              "MozBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "MozTransform": "translate(-2px, -9px)",
              "OBorderRadius": "50%",
              "OBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "OTransform": "translate(-2px, -9px)",
              "WebkitBorderRadius": "50%",
              "WebkitBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "WebkitTransform": "translate(-2px, -9px)",
              "backgroundColor": "rgb(248, 248, 248)",
              "borderRadius": "50%",
              "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "height": "18px",
              "msBorderRadius": "50%",
              "msBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
              "msTransform": "translate(-2px, -9px)",
              "transform": "translate(-2px, -9px)",
              "width": "18px",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AlphaPointer renders correctly 1`] = `
<div
  style={
    Object {
      "MozBorderRadius": "50%",
      "MozBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
      "MozTransform": "translate(-9px, -1px)",
      "OBorderRadius": "50%",
      "OBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
      "OTransform": "translate(-9px, -1px)",
      "WebkitBorderRadius": "50%",
      "WebkitBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
      "WebkitTransform": "translate(-9px, -1px)",
      "backgroundColor": "rgb(248, 248, 248)",
      "borderRadius": "50%",
      "boxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
      "height": "18px",
      "msBorderRadius": "50%",
      "msBoxShadow": "0 1px 4px 0 rgba(0, 0, 0, 0.37)",
      "msTransform": "translate(-9px, -1px)",
      "transform": "translate(-9px, -1px)",
      "width": "18px",
    }
  }
/>
`;
